{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 51,
  "lineage": "b4afbb79-1b4a-46dc-007c-f0863027791e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-076c0e5ffcda197c8",
            "default_route_table_id": "rtb-076c0e5ffcda197c8",
            "id": "rtb-076c0e5ffcda197c8",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-user-default-route"
            },
            "tags_all": {
              "Name": "default-user-default-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:security-group/sg-0aab814d516a41a3f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0aab814d516a41a3f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "939735320461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-user-default-sg"
            },
            "tags_all": {
              "Name": "default-user-default-sg"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09997c387f9bcca07",
            "association_id": "eipassoc-087df95f5fe02db2c",
            "domain": "vpc",
            "id": "eipalloc-09997c387f9bcca07",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-05e807520b4a1c253",
            "private_dns": "ip-10-0-0-90.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.90",
            "public_dns": "ec2-54-180-39-243.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.39.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019474021c99c7cdb",
            "association_id": "eipassoc-02842abfd598fa585",
            "domain": "vpc",
            "id": "eipalloc-019474021c99c7cdb",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-089eae84ec928b9ca",
            "private_dns": "ip-10-0-1-163.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-52-79-163-189.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.163.189",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cf2437c34073cd6",
            "association_id": "eipassoc-0c100396f62bc5b31",
            "domain": "vpc",
            "id": "eipalloc-06cf2437c34073cd6",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0e6c88f5703ff9778",
            "private_dns": "ip-10-0-2-187.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.187",
            "public_dns": "ec2-3-39-3-229.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.3.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_for_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb60994bcb22cc2c",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-08aeb28e0b0ad9f68",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08aeb28e0b0ad9f68",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "default-user-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2bb2d640b85a9c0",
            "private_dns": "ip-10-0-0-174.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0851884fd013e7f15",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0b861fb7a4a548a",
            "tags": {
              "Name": "ami-instance"
            },
            "tags_all": {
              "Name": "ami-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc4e2e4a2aba63f6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c8fa5c3e8dafaad4",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-0794772f3a091a667",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0794772f3a091a667",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "default-user-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02a58a5f96a20be57",
            "private_dns": "ip-10-0-0-185.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.185",
            "public_ip": "3.35.0.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0560851903cdd9653",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0b861fb7a4a548a",
            "tags": {
              "Name": "var.id-0"
            },
            "tags_all": {
              "Name": "var.id-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc4e2e4a2aba63f6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ami_from_instance.ami",
            "aws_instance.instance_for_ami",
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2",
            "null_resource.wait_for_web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c8fa5c3e8dafaad4",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-0dfcb9ec15eff3380",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfcb9ec15eff3380",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "default-user-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01bd8692690d37f53",
            "private_dns": "ip-10-0-1-239.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_ip": "3.34.184.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b1c1f57bf434260",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a05b2440d441cc16",
            "tags": {
              "Name": "var.id-1"
            },
            "tags_all": {
              "Name": "var.id-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc4e2e4a2aba63f6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ami_from_instance.ami",
            "aws_instance.instance_for_ami",
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2",
            "null_resource.wait_for_web"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c8fa5c3e8dafaad4",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-0f2d5b856cc126b17",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2d5b856cc126b17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "default-user-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02670019ceb63dc73",
            "private_dns": "ip-10-0-2-201.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.201",
            "public_ip": "43.200.176.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090870fdfc60bda39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c7b54a66531b839",
            "tags": {
              "Name": "var.id-2"
            },
            "tags_all": {
              "Name": "var.id-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc4e2e4a2aba63f6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ami_from_instance.ami",
            "aws_instance.instance_for_ami",
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2",
            "null_resource.wait_for_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:internet-gateway/igw-0488487caaf824793",
            "id": "igw-0488487caaf824793",
            "owner_id": "939735320461",
            "tags": {
              "Name": "default-user-igw"
            },
            "tags_all": {
              "Name": "default-user-igw"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "multi_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09997c387f9bcca07",
            "association_id": "eipassoc-087df95f5fe02db2c",
            "connectivity_type": "public",
            "id": "nat-0858bd3a37e20a529",
            "network_interface_id": "eni-05e807520b4a1c253",
            "private_ip": "10.0.0.90",
            "public_ip": "54.180.39.243",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e0b861fb7a4a548a",
            "tags": {
              "Name": "default-user-ngw-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "default-user-ngw-ap-northeast-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019474021c99c7cdb",
            "association_id": "eipassoc-02842abfd598fa585",
            "connectivity_type": "public",
            "id": "nat-04df27d5a5bdcc439",
            "network_interface_id": "eni-089eae84ec928b9ca",
            "private_ip": "10.0.1.163",
            "public_ip": "52.79.163.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a05b2440d441cc16",
            "tags": {
              "Name": "default-user-ngw-ap-northeast-2b"
            },
            "tags_all": {
              "Name": "default-user-ngw-ap-northeast-2b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cf2437c34073cd6",
            "association_id": "eipassoc-0c100396f62bc5b31",
            "connectivity_type": "public",
            "id": "nat-04bda7f88f021903d",
            "network_interface_id": "eni-0e6c88f5703ff9778",
            "private_ip": "10.0.2.187",
            "public_ip": "3.39.3.229",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c7b54a66531b839",
            "tags": {
              "Name": "default-user-ngw-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "default-user-ngw-ap-northeast-2c"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0b46803967d8a5917",
            "id": "rtb-0b46803967d8a5917",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0858bd3a37e20a529",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-user-pri-rt-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "default-user-pri-rt-ap-northeast-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0538738b587978fac",
            "id": "rtb-0538738b587978fac",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04df27d5a5bdcc439",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-user-pri-rt-ap-northeast-2b"
            },
            "tags_all": {
              "Name": "default-user-pri-rt-ap-northeast-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0f1eb8dd46e9b88b1",
            "id": "rtb-0f1eb8dd46e9b88b1",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04bda7f88f021903d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-user-pri-rt-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "default-user-pri-rt-ap-northeast-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0cee12753c8c88093",
            "id": "rtb-0cee12753c8c88093",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-user-pri-rt-ap-northeast-2d"
            },
            "tags_all": {
              "Name": "default-user-pri-rt-ap-northeast-2d"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-08cf8de0688588b8b",
            "id": "rtb-08cf8de0688588b8b",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0488487caaf824793",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-user-route-pub"
            },
            "tags_all": {
              "Name": "default-user-route-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb90c6bb57aef1c5",
            "route_table_id": "rtb-0b46803967d8a5917",
            "subnet_id": "subnet-0a8383fdda04c579a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0451c3f1f2c7da152",
            "route_table_id": "rtb-0538738b587978fac",
            "subnet_id": "subnet-0462dd700edf3d770"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089d265651866a106",
            "route_table_id": "rtb-0f1eb8dd46e9b88b1",
            "subnet_id": "subnet-0835e46d50efec322"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": "ap-northeast-2d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00555e8145e87eba9",
            "route_table_id": "rtb-0cee12753c8c88093",
            "subnet_id": "subnet-06f5f235ce1695c54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_nat_gateway.multi_nat",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0674196cbf1a0cafd",
            "route_table_id": "rtb-08cf8de0688588b8b",
            "subnet_id": "subnet-0e0b861fb7a4a548a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c1f21ba49e96e8c",
            "route_table_id": "rtb-08cf8de0688588b8b",
            "subnet_id": "subnet-0a05b2440d441cc16"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0821e5671c85894b8",
            "route_table_id": "rtb-08cf8de0688588b8b",
            "subnet_id": "subnet-00c7b54a66531b839"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd8ece448e6de91f",
            "route_table_id": "rtb-08cf8de0688588b8b",
            "subnet_id": "subnet-047360786228dee53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:security-group/sg-0dc4e2e4a2aba63f6",
            "description": "security group for instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc4e2e4a2aba63f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "default-user-web-sg",
            "name_prefix": "",
            "owner_id": "939735320461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-user-web-sg"
            },
            "tags_all": {
              "Name": "default-user-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0a8383fdda04c579a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8383fdda04c579a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-private-subnet-1"
            },
            "tags_all": {
              "Name": "default-user-private-subnet-1"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0462dd700edf3d770",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0462dd700edf3d770",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-private-subnet-2"
            },
            "tags_all": {
              "Name": "default-user-private-subnet-2"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0835e46d50efec322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0835e46d50efec322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-private-subnet-3"
            },
            "tags_all": {
              "Name": "default-user-private-subnet-3"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-06f5f235ce1695c54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f5f235ce1695c54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-private-subnet-4"
            },
            "tags_all": {
              "Name": "default-user-private-subnet-4"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0e0b861fb7a4a548a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0b861fb7a4a548a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-public-subnet-1"
            },
            "tags_all": {
              "Name": "default-user-public-subnet-1"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0a05b2440d441cc16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a05b2440d441cc16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-public-subnet-2"
            },
            "tags_all": {
              "Name": "default-user-public-subnet-2"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-00c7b54a66531b839",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c7b54a66531b839",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-public-subnet-3"
            },
            "tags_all": {
              "Name": "default-user-public-subnet-3"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-047360786228dee53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047360786228dee53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-user-public-subnet-4"
            },
            "tags_all": {
              "Name": "default-user-public-subnet-4"
            },
            "vpc_id": "vpc-08c1f94068e2a664c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:vpc/vpc-08c1f94068e2a664c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1c6e6c8f8347c88",
            "default_route_table_id": "rtb-076c0e5ffcda197c8",
            "default_security_group_id": "sg-0aab814d516a41a3f",
            "dhcp_options_id": "dopt-0946a0de0cb1bcec9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c1f94068e2a664c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076c0e5ffcda197c8",
            "owner_id": "939735320461",
            "tags": {
              "Name": "default-user"
            },
            "tags_all": {
              "Name": "default-user"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}